KAS-3719 Fix scrolling for email management page + streamline structure

--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -36,5 +36,7 @@
       </Auk::Toolbar::Group>
     </Auk::Toolbar>
   </Auk::Navbar>
-  {{outlet}}
+  <div class="auk-scroll-wrapper__body">
+    {{outlet}}
+  </div>
 </div>
