--- a/app/templates/settings/users/user.hbs
+++ b/app/templates/settings/users/user.hbs
@@ -23,113 +23,115 @@
   </Auk::Toolbar>
 </Auk::Navbar>
 
-<div class="au-o-grid">
-  <div class="au-o-grid__item au-u-3-4@medium au-u-2-3@large">
-    <div class="auk-u-m-4 auk-u-mr-2 auk-u-ml-2">
-      <Auk::Panel>
-        <Auk::Panel::Header>
-          <AuToolbar class="auk-u-maximize-width" as |Group|>
-            <Group>
-              <h4 data-test-route-settings---user-general-info class="auk-panel__title">
-                {{t "manage-users-general-info"}}
-              </h4>
-            </Group>
-            <Group>
-              {{#if @model.isBlocked}}
-                <AuButton
-                  {{on "click" (toggle "showUnblockUser" this)}}
-                >
-                  {{t "unblock-user"}}
-                </AuButton>
-              {{else}}
-                <AuButton
-                  @alert={{true}}
-                  {{on "click" (toggle "showBlockUser" this)}}
-                >
-                  {{t "block-user"}}
-                </AuButton>
-              {{/if}}
-            </Group>
-          </AuToolbar>
-        </Auk::Panel::Header>
-        <Auk::Panel::Body>
-          <dl>
-            <div class="auk-key-value-item auk-key-value-item--horizontal">
-              <div class="auk-key-value-item__label">{{t "manage-users-full-name"}}</div>
-              <div class="auk-key-value-item__value au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small">
-                {{this.model.fullName}}
+<div class="auk-u-overflow-hidden">
+  <div class="au-o-grid">
+    <div class="au-o-grid__item au-u-3-4@medium au-u-2-3@large">
+      <div class="auk-u-m-4 auk-u-mr-2 auk-u-ml-2">
+        <Auk::Panel>
+          <Auk::Panel::Header>
+            <AuToolbar class="auk-u-maximize-width" as |Group|>
+              <Group>
+                <h4 data-test-route-settings---user-general-info class="auk-panel__title">
+                  {{t "manage-users-general-info"}}
+                </h4>
+              </Group>
+              <Group>
+                {{#if @model.isBlocked}}
+                  <AuButton
+                    {{on "click" (toggle "showUnblockUser" this)}}
+                  >
+                    {{t "unblock-user"}}
+                  </AuButton>
+                {{else}}
+                  <AuButton
+                    @alert={{true}}
+                    {{on "click" (toggle "showBlockUser" this)}}
+                  >
+                    {{t "block-user"}}
+                  </AuButton>
+                {{/if}}
+              </Group>
+            </AuToolbar>
+          </Auk::Panel::Header>
+          <Auk::Panel::Body>
+            <dl>
+              <div class="auk-key-value-item auk-key-value-item--horizontal">
+                <div class="auk-key-value-item__label">{{t "manage-users-full-name"}}</div>
+                <div class="auk-key-value-item__value au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small">
+                  {{this.model.fullName}}
+                </div>
               </div>
-            </div>
-          </dl>
-          <dl>
-            <Auk::KeyValue
-              @key={{t "last-seen"}}
-              @value={{if
-                @model.loginActivity.startDate
-                (concat
-                  (moment-format @model.loginActivity.startDate)
-                  " "
-                  (t "at")
-                  " "
-                  (moment-format @model.loginActivity.startDate "HH:mm")
-                )
-                "-"
-              }}
-              @layout="horizontal"
-            />
-          </dl>
-        </Auk::Panel::Body>
-      </Auk::Panel>
-    </div>
-    <div class="auk-u-m-4 auk-u-mr-2 auk-u-ml-2">
-      <Auk::Panel>
-        <Auk::Panel::Header>
-          <h4 data-test-route-settings---user-technical-info class="auk-panel__title">
-            {{t "user-rights"}}
-          </h4>
-        </Auk::Panel::Header>
-        <Auk::Panel::Body class="au-u-padding-none">
-          <AuTable>
-            <:header>
-              <tr>
-                <th>{{capitalize (t "organization")}}</th>
-                <th>{{t "ovo-code"}}</th>
-                <th>{{capitalize (t "group")}}</th>
-                <th></th>
-              </tr>
-            </:header>
-            <:body>
-              {{#each this.model.memberships as |membership|}}
-                <tr class="{{if membership.isBlocked "au-u-muted"}}">
-                  <td>{{membership.organization.name}}</td>
-                  <td>{{membership.organization.identifier}}</td>
-                  <td>{{membership.role.label}}</td>
-                  <td class="au-u-text-right">
-                    {{#if membership.isBlocked}}
-                      <AuButton
-                        @skin="naked"
-                        @icon="circle-full"
-                        {{on "click" (queue (toggle "showUnblockMembership" this) (set this "membershipBeingBlocked" membership))}}
-                      >
-                        {{t "unblock-membership"}}
-                      </AuButton>
-                    {{else}}
-                      <AuButton
-                        @skin="naked"
-                        @icon="circle-x"
-                        @alert={{true}}
-                        {{on "click" (queue (toggle "showBlockMembership" this) (set this "membershipBeingBlocked" membership))}}
-                      >
-                        {{t "block-membership"}}
-                      </AuButton>
-                    {{/if}}
-                  </td>
+            </dl>
+            <dl>
+              <Auk::KeyValue
+                @key={{t "last-seen"}}
+                @value={{if
+                  @model.loginActivity.startDate
+                  (concat
+                    (moment-format @model.loginActivity.startDate)
+                    " "
+                    (t "at")
+                    " "
+                    (moment-format @model.loginActivity.startDate "HH:mm")
+                  )
+                  "-"
+                }}
+                @layout="horizontal"
+              />
+            </dl>
+          </Auk::Panel::Body>
+        </Auk::Panel>
+      </div>
+      <div class="auk-u-m-4 auk-u-mr-2 auk-u-ml-2">
+        <Auk::Panel>
+          <Auk::Panel::Header>
+            <h4 data-test-route-settings---user-technical-info class="auk-panel__title">
+              {{t "user-rights"}}
+            </h4>
+          </Auk::Panel::Header>
+          <Auk::Panel::Body class="au-u-padding-none">
+            <AuTable>
+              <:header>
+                <tr>
+                  <th>{{capitalize (t "organization")}}</th>
+                  <th>{{t "ovo-code"}}</th>
+                  <th>{{capitalize (t "group")}}</th>
+                  <th></th>
                 </tr>
-              {{/each}}
-            </:body>
-          </AuTable>
-        </Auk::Panel::Body>
-      </Auk::Panel>
+              </:header>
+              <:body>
+                {{#each this.model.memberships as |membership|}}
+                  <tr class="{{if membership.isBlocked "au-u-muted"}}">
+                    <td>{{membership.organization.name}}</td>
+                    <td>{{membership.organization.identifier}}</td>
+                    <td>{{membership.role.label}}</td>
+                    <td class="au-u-text-right">
+                      {{#if membership.isBlocked}}
+                        <AuButton
+                          @skin="naked"
+                          @icon="circle-full"
+                          {{on "click" (queue (toggle "showUnblockMembership" this) (set this "membershipBeingBlocked" membership))}}
+                        >
+                          {{t "unblock-membership"}}
+                        </AuButton>
+                      {{else}}
+                        <AuButton
+                          @skin="naked"
+                          @icon="circle-x"
+                          @alert={{true}}
+                          {{on "click" (queue (toggle "showBlockMembership" this) (set this "membershipBeingBlocked" membership))}}
+                        >
+                          {{t "block-membership"}}
+                        </AuButton>
+                      {{/if}}
+                    </td>
+                  </tr>
+                {{/each}}
+              </:body>
+            </AuTable>
+          </Auk::Panel::Body>
+        </Auk::Panel>
+      </div>
     </div>
   </div>
 </div>
