KAS-3713 Fix incorrect skin on batch edit button

--- a/app/templates/agenda/documents.hbs
+++ b/app/templates/agenda/documents.hbs
@@ -15,6 +15,7 @@
               {{#if (user-may "manage-documents")}}
                 <AuButton
                   data-test-route-agenda-documents-batch-edit
+                  @skin="secondary"
                   @icon="pencil"
                   {{on "click" this.openBatchDetails}}
                 >
