--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -103,12 +103,8 @@
           <div class="auk-u-mt-2">
             {{#if @newsletterInfo}}
               {{#if @newsletterInfo.inNewsletter}}
-                <AuPill @size="small" @skin="success" @icon="visible">
+                <AuPill @size="small" @skin="border" @icon="website">
                   {{t "on-the-website"}}
-                </AuPill>
-              {{else}}
-                <AuPill @size="small" @skin="danger" @icon="not-visible">
-                  {{t "not-on-the-website"}}
                 </AuPill>
               {{/if}}
             {{else}}
