--- a/app/templates/styleguide/form-group.hbs
+++ b/app/templates/styleguide/form-group.hbs
@@ -9,15 +9,15 @@
   <div class="auk-form-group-layout auk-form-group-layout--standard">
     <div class="auk-form-group">
       <Auk::Label for="defaultInput">Label</Auk::Label>
-      <Auk::Input id="defaultInput" @block={{true}} />
+      <AuInput id="defaultInput" @width="block" />
     </div>
     <div class="auk-form-group">
       <Auk::Label for="defaultInput">Label</Auk::Label>
-      <Auk::Input id="defaultInput" @block={{true}} />
+      <AuInput id="defaultInput" @width="block" />
     </div>
     <div class="auk-form-group">
       <Auk::Label for="defaultInput">Label</Auk::Label>
-      <Auk::Input id="defaultInput" @block={{true}} />
+      <AuInput id="defaultInput" @width="block" />
     </div>
   </div>
   {{!-- END-SNIPPET default-form-grouping --}}
@@ -31,15 +31,15 @@
   <div class="auk-form-group-layout auk-form-group-layout--horizontal">
     <div class="auk-form-group">
       <Auk::Label for="defaultInput">Label</Auk::Label>
-      <Auk::Input id="defaultInput" />
+      <AuInput id="defaultInput" />
     </div>
     <div class="auk-form-group">
       <Auk::Label for="defaultInput">Label</Auk::Label>
-      <Auk::Input id="defaultInput" />
+      <AuInput id="defaultInput" />
     </div>
     <div class="auk-form-group">
       <Auk::Label for="defaultInput">Label</Auk::Label>
-      <Auk::Input id="defaultInput" />
+      <AuInput id="defaultInput" />
     </div>
   </div>
   {{!-- END-SNIPPET horizontal-form-grouping --}}
@@ -55,21 +55,21 @@
       <div class="auk-o-grid-col-6">
         <div class="auk-form-group">
           <Auk::Label for="defaultInput">Label</Auk::Label>
-          <Auk::Input id="defaultInput" @block={{true}} />
+          <AuInput id="defaultInput" @width="block" />
         </div>
         <div class="auk-form-group">
           <Auk::Label for="defaultInput">Label</Auk::Label>
-          <Auk::Input id="defaultInput" @block={{true}} />
+          <AuInput id="defaultInput" @width="block" />
         </div>
       </div>
       <div class="auk-o-grid-col-6">
         <div class="auk-form-group">
           <Auk::Label for="defaultInput">Label</Auk::Label>
-          <Auk::Input id="defaultInput" @block={{true}} />
+          <AuInput id="defaultInput" @width="block" />
         </div>
         <div class="auk-form-group">
           <Auk::Label for="defaultInput">Label</Auk::Label>
-          <Auk::Input id="defaultInput" @block={{true}} />
+          <AuInput id="defaultInput" @width="block" />
         </div>
       </div>
     </div>
@@ -85,17 +85,17 @@
   <div class="auk-form-group-layout auk-form-group-layout--standard">
     <div class="auk-form-group">
       <Auk::Label @error={{true}}>Label</Auk::Label>
-      <Auk::Input @block={{true}} @error={{true}} />
+      <AuInput @width="block" @error={{true}} />
       <Auk::FormHelpText @text="This is an error message." @skin="danger" @icon="alert-triangle" />
     </div>
     <div class="auk-form-group">
       <Auk::Label>Label</Auk::Label>
-      <Auk::Input @block={{true}} />
+      <AuInput @width="block" />
       <Auk::FormHelpText @text="This is a success message." @skin="success" @icon="check" />
     </div>
     <div class="auk-form-group">
       <Auk::Label>Label</Auk::Label>
-      <Auk::Input @block={{true}} />
+      <AuInput @width="block" />
       <Auk::FormHelpText @text="This is a warning message." @icon="alert-triangle" @skin="warning" />
     </div>
   </div>
